err/ptp.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Js2Py-0.58.egg-info'...
Listing './lib/python3.5/site-packages/PTP-0.4.2.egg-info'...
Listing './lib/python3.5/site-packages/js2py'...
Listing './lib/python3.5/site-packages/js2py/constructors'...
Listing './lib/python3.5/site-packages/js2py/es6'...
Listing './lib/python3.5/site-packages/js2py/host'...
Listing './lib/python3.5/site-packages/js2py/internals'...
Compiling './lib/python3.5/site-packages/js2py/internals/byte_trans.py'...
***   File "./lib/python3.5/site-packages/js2py/internals/byte_trans.py", line 685
    print a.declared_vars
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/js2py/internals/constructors'...
Compiling './lib/python3.5/site-packages/js2py/internals/constructors/jsfunction.py'...
***   File "./lib/python3.5/site-packages/js2py/internals/constructors/jsfunction.py", line 68
    print ' '.join(map(to_string, args))
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/js2py/internals/opcodes.py'...
***   File "./lib/python3.5/site-packages/js2py/internals/opcodes.py", line 653
    print typ
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/js2py/internals/prototypes'...
Compiling './lib/python3.5/site-packages/js2py/internals/speed.py'...
***   File "./lib/python3.5/site-packages/js2py/internals/speed.py", line 50
    print timeit(
               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/js2py/prototypes'...
Listing './lib/python3.5/site-packages/js2py/py_node_modules'...
Compiling './lib/python3.5/site-packages/js2py/test_internals.py'...
***   File "./lib/python3.5/site-packages/js2py/test_internals.py", line 9
    print seval.eval_js_vm(x)
              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/js2py/translators'...
Listing './lib/python3.5/site-packages/js2py/utils'...
Listing './lib/python3.5/site-packages/lxml'...
Listing './lib/python3.5/site-packages/lxml/html'...
Listing './lib/python3.5/site-packages/lxml/includes'...
Listing './lib/python3.5/site-packages/lxml/includes/libexslt'...
Listing './lib/python3.5/site-packages/lxml/includes/libxml'...
Listing './lib/python3.5/site-packages/lxml/includes/libxslt'...
Listing './lib/python3.5/site-packages/lxml/isoschematron'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/rng'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl/iso-schematron-xslt1'...
Listing './lib/python3.5/site-packages/lxml-4.1.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/ptp'...
Listing './lib/python3.5/site-packages/ptp/libptp'...
Listing './lib/python3.5/site-packages/ptp/tools'...
Listing './lib/python3.5/site-packages/ptp/tools/arachni'...
Listing './lib/python3.5/site-packages/ptp/tools/burpsuite'...
Listing './lib/python3.5/site-packages/ptp/tools/dirbuster'...
Listing './lib/python3.5/site-packages/ptp/tools/hoppy'...
Listing './lib/python3.5/site-packages/ptp/tools/metasploit'...
Listing './lib/python3.5/site-packages/ptp/tools/nmap'...
Listing './lib/python3.5/site-packages/ptp/tools/owasp'...
Listing './lib/python3.5/site-packages/ptp/tools/owasp/cm008'...
Listing './lib/python3.5/site-packages/ptp/tools/robots'...
Listing './lib/python3.5/site-packages/ptp/tools/skipfish'...
Listing './lib/python3.5/site-packages/ptp/tools/w3af'...
Listing './lib/python3.5/site-packages/ptp/tools/wapiti'...
Listing './lib/python3.5/site-packages/pyjsparser'...
Listing './lib/python3.5/site-packages/pyjsparser-2.5.2.egg-info'...
Listing './lib/python3.5/site-packages/pytz'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Africa'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Argentina'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Indiana'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Kentucky'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/North_Dakota'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Antarctica'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Arctic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Asia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Atlantic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Australia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Brazil'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Canada'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Chile'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Etc'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Europe'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Indian'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Mexico'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Pacific'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/US'...
Listing './lib/python3.5/site-packages/pytz-2017.3.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/tests/libptp'...
Listing './lib/python3.5/site-packages/tests/tools'...
Listing './lib/python3.5/site-packages/tests/tools/arachni'...
Listing './lib/python3.5/site-packages/tests/tools/burpsuite'...
Listing './lib/python3.5/site-packages/tests/tools/dirbuster'...
Listing './lib/python3.5/site-packages/tests/tools/owasp'...
Listing './lib/python3.5/site-packages/tests/tools/robots'...
Listing './lib/python3.5/site-packages/tests/tools/skipfish'...
Listing './lib/python3.5/site-packages/tests/tools/w3af'...
Listing './lib/python3.5/site-packages/tests/tools/wapiti'...
Listing './lib/python3.5/site-packages/tzlocal'...
Listing './lib/python3.5/site-packages/tzlocal/test_data'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/localtime'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/localtime/etc'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/symlink_localtime'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/symlink_localtime/etc'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/symlink_localtime/usr'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/symlink_localtime/usr/share'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/symlink_localtime/usr/share/zoneinfo'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/symlink_localtime/usr/share/zoneinfo/Africa'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/timezone'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/timezone/etc'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/timezone_setting'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/timezone_setting/etc'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/timezone_setting/etc/conf.d'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/vardbzoneinfo'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/vardbzoneinfo/var'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/vardbzoneinfo/var/db'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/zone_setting'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/zone_setting/etc'...
Listing './lib/python3.5/site-packages/tzlocal/test_data/zone_setting/etc/sysconfig'...
Listing './lib/python3.5/site-packages/tzlocal-1.5.1.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
